--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <title>Pronto Seats </title>
 </head>
 <link rel="stylesheet" href="assets/css/reset.css" />
-<link rel="stylesheet" href="assets/css/index.css" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
 crossorigin="anonymous">
+<link rel="stylesheet" href="assets/css/custom.css" />
+
 <body>
+
 
 
 
