--- a/serverlist.html
+++ b/serverlist.html
@@ -13,6 +13,9 @@
 
 <body id='serverlist'>
     <div>
-
+        // createTables= $('<img>' );
+        // createTables.addClass('restTables');
+        // createTables.attr('src',"assets/images/table.ico");
+        // createTables.prepend('<span class="badge badge-secondary">'+ tableNum + '</span>')
 
     </div>
