changed weather timer, added more widgets es6 comments are cool

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
         </div>
 
         <!-- Modal body -->
-        <div class="modal-body">
+        <div id="weatherModal" class="modal-body">
 
         </div>
 
