--- a/main.html
+++ b/main.html
@@ -190,7 +190,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                        <h5 class="modal-title" id="exampleModalLongTitle">WaitList</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 
                         </button>
