--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-  <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"-->
-  <!--  crossorigin="anonymous"></script>-->
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>-->
-  <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>-->
   <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 
@@ -74,7 +69,7 @@
             </div>
             <button id="wait" class="btn btn-secondary">Wait List</button>
             <input type="button" id="tables" class="btn btn-secondary" data-toggle="modal" data-target="#assignTable" value="Assign Table">
-            
+
           </form>
         </div>
         <!-- // col-1g-12 -->
@@ -204,7 +199,8 @@
                     </select>
                   </div>
                   <!-- // form group -->
-                  <input type="button" class="btn btn-secondary" id="tableServer" data-toggle="modal"  data-dismiss="modal" value="Assign Table" clear="both"></input>
+                  <input type="button" class="btn btn-secondary" id="tableServer" data-toggle="modal" data-dismiss="modal" value="Assign Table"
+                    clear="both"></input>
               </div>
               <!-- // col-md-8 -->
             </div>
@@ -237,20 +233,20 @@
         <div class="modal-body">
           <table class="table">
             <thead>
-                <tr>
+              <tr>
 
-                    <th scope="col">Party Name</th>
-                    <th scope="col">Adults</th>
-                    <th scope="col">Assign</th>
-                    <th scope="col">Clear</th>
-                </tr>
+                <th scope="col">Party Name</th>
+                <th scope="col">Adults</th>
+                <th scope="col">Assign</th>
+                <th scope="col">Clear</th>
+              </tr>
             </thead>
             <tbody id='waitlist_display'>
 
 
 
             </tbody>
-        </table>
+          </table>
         </div>
 
         <!-- Modal footer -->
@@ -277,7 +273,7 @@
 
         <!-- Modal body -->
         <div id="weatherModal" class="modal-body">
-        
+
         </div>
 
         <!-- Modal footer -->
