--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="footer">
       <div class="row">
         <div class="col-lg-12">
-          This awesome eatery admin system brought to you by &copy; prontoSeats ~ all rights reserved
+          This awesome eatery admin system brought to you by &copy; ProntoSeats ~ all rights reserved
         </div>
         <!-- // col-lg-12 -->
       </div>
